// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 빈 상태 — 페이지 헤더·탭·기간 네비게이터의 기하 1`] = `
"<div data-testid="screen-scroll" class="bottom-[var(--tab-bar-h)] fixed inset-x-0 overflow-y-auto overscroll-y-none top-[var(--sa-top)]">
<div class="-mt-[var(--sa-top)] space-y-4">
<div>
<div class="bg-bg fixed inset-x-0 pb-2 pt-[calc(1rem+var(--sa-top))] px-4 top-0 z-10">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="font-semibold text-lg text-text">보스 수익</h1>
<div class="flex gap-3 items-center">
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">아이템 가격</button>
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">히스토리</button>
</div>
</div>
<div class="flex gap-4 items-center">
<button type="button" class="bg-primary-tint font-semibold px-3 py-[5px] rounded-full text-primary-ink text-sm">주간</button>
<button type="button" class="font-medium px-3 text-sm text-text-muted">월간</button>
</div>
<div class="flex gap-4 items-center justify-center">
<button type="button" aria-label="이전 기간" class="border border-border disabled:opacity-30 flex h-7 items-center justify-center rounded-full text-text w-7">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-left w-4" aria-hidden="true">
<path d="m15 18-6-6 6-6">
</path>
</svg>
</button>
<div class="text-center">
<p class="font-semibold text-sm text-text">7월 2주차</p>
<p class="mt-0.5 tabular-nums text-text-muted text-xs">7월 9일 ~ 7월 15일</p>
</div>
<button type="button" aria-label="다음 기간" class="border border-border disabled:opacity-30 flex h-7 items-center justify-center rounded-full text-text w-7">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-right w-4" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
</div>
</div>
</div>
<div aria-hidden="true" style="height: 0px;">
</div>
</div>
<div data-testid="pull-content" class="pb-4 px-4 space-y-2" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<div data-testid="empty-state" class="bg-surface border border-border flex flex-col gap-3 items-center px-4 py-8 rounded-[14px] text-center">
<div data-testid="empty-state-badge" aria-hidden="true" class="bg-primary-tint flex h-14 items-center justify-center rounded-full w-14">
<svg data-testid="profit-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="h-7 text-primary-ink w-7">
<ellipse cx="16.3" cy="6.4" rx="5.2" ry="2.2">
</ellipse>
<path d="M11.1 6.4v3.7">
</path>
<path d="M21.5 6.4v8.2">
</path>
<path d="M11.1 9.1a5.2 2.2 0 0 0 10.4 0">
</path>
<path d="M13.4 13.7A5.2 2.2 0 0 0 21.5 11.85">
</path>
<path d="M13.7 16.5A5.2 2.2 0 0 0 21.5 14.6">
</path>
<circle cx="8" cy="15" r="5.5">
</circle>
</svg>
</div>
<div class="space-y-1">
<p data-testid="empty-state-title" class="font-semibold text-sm text-text">아직 처치한 보스가 없습니다</p>
<p data-testid="empty-state-description" class="max-w-[240px] mx-auto text-text-muted text-xs">보스를 처치하면 수익이 자동으로 집계됩니다</p>
</div>
</div>
</div>
</div>
</div>"
`;

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 여러 캐릭터 · 펼침 — 형제 카드가 섞였을 때의 순서와 z 층 1`] = `
"<div data-testid="screen-scroll" class="bottom-[var(--tab-bar-h)] fixed inset-x-0 overflow-y-auto overscroll-y-none top-[var(--sa-top)]">
<div class="-mt-[var(--sa-top)] space-y-4">
<div>
<div class="bg-bg fixed inset-x-0 pb-2 pt-[calc(1rem+var(--sa-top))] px-4 top-0 z-10">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="font-semibold text-lg text-text">보스 수익</h1>
<div class="flex gap-3 items-center">
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">아이템 가격</button>
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">히스토리</button>
</div>
</div>
<div class="flex gap-4 items-center">
<button type="button" class="bg-primary-tint font-semibold px-3 py-[5px] rounded-full text-primary-ink text-sm">주간</button>
<button type="button" class="font-medium px-3 text-sm text-text-muted">월간</button>
</div>
<div class="flex gap-4 items-center justify-center">
<button type="button" aria-label="이전 기간" class="border border-border disabled:opacity-30 flex h-7 items-center justify-center rounded-full text-text w-7">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-left w-4" aria-hidden="true">
<path d="m15 18-6-6 6-6">
</path>
</svg>
</button>
<div class="text-center">
<p class="font-semibold text-sm text-text">7월 2주차</p>
<p class="mt-0.5 tabular-nums text-text-muted text-xs">7월 9일 ~ 7월 15일</p>
</div>
<button type="button" aria-label="다음 기간" class="border border-border disabled:opacity-30 flex h-7 items-center justify-center rounded-full text-text w-7">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-right w-4" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
</div>
<div>
<div class="flex h-6 items-center relative">
<p class="font-semibold text-text-muted text-xs tracking-wide">7월 2주차 총 수익</p>
</div>
<div class="flex gap-2.5 items-center mt-1.5">
<span class="bg-primary-tint flex h-8 items-center justify-center rounded-full shrink-0 text-primary-ink w-8">
<svg data-testid="profit-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-[18px] w-[18px]" aria-hidden="true">
<ellipse cx="16.3" cy="6.4" rx="5.2" ry="2.2">
</ellipse>
<path d="M11.1 6.4v3.7">
</path>
<path d="M21.5 6.4v8.2">
</path>
<path d="M11.1 9.1a5.2 2.2 0 0 0 10.4 0">
</path>
<path d="M13.4 13.7A5.2 2.2 0 0 0 21.5 11.85">
</path>
<path d="M13.7 16.5A5.2 2.2 0 0 0 21.5 14.6">
</path>
<circle cx="8" cy="15" r="5.5">
</circle>
</svg>
</span>
<p class="font-extrabold leading-none tabular-nums text-primary-ink text-xl">22,000,000 <span class="font-bold text-text-muted text-xs">메소</span>
</p>
<button type="button" aria-label="총 수익 자세히 보기" aria-expanded="false" class="border border-border flex flex-none font-semibold gap-0.5 h-6 items-center ml-auto px-2.5 rounded-full text-[11px] text-text-muted">자세히 보기<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="flex-none h-3 lucide lucide-chevron-down w-3" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</button>
</div>
<div class="bg-border h-px mt-3" aria-hidden="true">
</div>
</div>
</div>
</div>
<div aria-hidden="true" style="height: 0px;">
</div>
</div>
<div data-testid="pull-content" class="pb-4 px-4 space-y-2" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<div class="isolate relative">
<div class="bg-surface border border-border overflow-clip rounded-[14px]">
<button type="button" class="bg-surface flex gap-3 items-center px-4 py-3 sticky w-full z-[5]" style="top: calc(0px - var(--sa-top));">
<span class="flex h-10 items-center justify-center relative shrink-0 w-10">
<span class="bg-surface-2 h-8 overflow-hidden relative rounded-full w-8">
<span class="flex font-bold h-full items-center justify-center text-text text-xs w-full">낟</span>
</span>
<svg viewBox="0 0 40 40" class="-scale-x-100 absolute h-full inset-0 pointer-events-none rotate-90 w-full" role="img" aria-label="주간 보스 처치 1 / 12">
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-1.25">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-11.067477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-20.884954084936208">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-30.70243112740431">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-40.519908169872416">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-50.33738521234052">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-60.15486225480862">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-69.97233929727673">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-79.78981633974483">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-89.60729338221293">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-99.42477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-109.24224746714914">
</circle>
</svg>
</span>
<span class="flex-1 font-semibold text-left text-sm text-text truncate">낟낟</span>
<span class="font-bold relative tabular-nums text-sm text-text">10,000,000 메소</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-up text-text-muted w-4" aria-hidden="true">
<path d="m18 15-6-6-6 6">
</path>
</svg>
</button>
<div class="border-border border-t">
<ul>
<li class="border-b border-border flex gap-3 items-start last:border-b-transparent p-4">
<div role="img" aria-label="자쿰" title="자쿰" style="width: 40px; height: 40px; background-image: url(&quot;/src/assets/bosses/zakum.webp&quot;); background-size: 220%; background-position: 60% 40%; background-repeat: no-repeat;" class="rounded-full shrink-0">
</div>
<div class="flex-1 min-w-0">
<button type="button" aria-label="자쿰 카오스 드롭 아이템 관리" class="flex gap-1.5 h-6 items-center text-left w-full">
<span class="font-extrabold inline-flex items-center rounded-full text-[10px] tracking-[.03em]" style="height: 20px; padding: 0px 10px; background: linear-gradient(180deg, rgb(60, 60, 60), rgb(34, 31, 31)); border: 1px solid rgb(202, 168, 127); color: rgb(240, 216, 184);">카오스</span>
<span class="font-semibold text-sm text-text truncate">자쿰</span>
<span class="bg-primary-tint border border-dashed border-primary flex-none font-bold h-6 inline-flex items-center ml-auto px-2.5 rounded-full text-[11px] text-primary-ink">＋ 드롭 추가</span>
</button>
<div class="flex gap-2 items-center justify-between mt-2">
<div class="border border-border gap-2 inline-flex items-center px-1 py-0.5 rounded-full">
<button type="button" aria-label="낟낟 자쿰 카오스 파티원 수 감소" class="bg-surface-2 disabled:opacity-40 flex h-[18px] items-center justify-center rounded-full text-text w-[18px]">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-3 lucide lucide-minus w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
</svg>
</button>
<span class="tabular-nums text-text text-xs">2</span>
<button type="button" aria-label="낟낟 자쿰 카오스 파티원 수 증가" class="bg-surface-2 disabled:opacity-40 flex h-[18px] items-center justify-center rounded-full text-text w-[18px]">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-3 lucide lucide-plus w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
<path d="M12 5v14">
</path>
</svg>
</button>
</div>
<span class="font-semibold tabular-nums text-sm text-text">5,000,000 메소</span>
</div>
</div>
</li>
</ul>
</div>
</div>
</div>
<div class="isolate relative">
<div class="">
<button type="button" class="bg-surface border border-border flex gap-3 items-center px-4 py-3 rounded-[14px] w-full">
<span class="flex h-10 items-center justify-center relative shrink-0 w-10">
<span class="bg-surface-2 h-8 overflow-hidden relative rounded-full w-8">
<span class="flex font-bold h-full items-center justify-center text-text text-xs w-full">두</span>
</span>
<svg viewBox="0 0 40 40" class="-scale-x-100 absolute h-full inset-0 pointer-events-none rotate-90 w-full" role="img" aria-label="주간 보스 처치 1 / 12">
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-1.25">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-11.067477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-20.884954084936208">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-30.70243112740431">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-40.519908169872416">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-50.33738521234052">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-60.15486225480862">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-69.97233929727673">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-79.78981633974483">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-89.60729338221293">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-99.42477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-109.24224746714914">
</circle>
</svg>
</span>
<span class="flex-1 font-semibold text-left text-sm text-text truncate">두번째</span>
<span class="font-bold relative tabular-nums text-sm text-text">12,000,000 메소</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-down text-text-muted w-4" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</button>
</div>
</div>
</div>
</div>
</div>"
`;

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 월간 탭 — 주간과 다른 본문 구조 1`] = `
"<div data-testid="screen-scroll" class="bottom-[var(--tab-bar-h)] fixed inset-x-0 overflow-y-auto overscroll-y-none top-[var(--sa-top)]">
<div class="-mt-[var(--sa-top)] space-y-4">
<div>
<div class="bg-bg fixed inset-x-0 pb-2 pt-[calc(1rem+var(--sa-top))] px-4 top-0 z-10">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="font-semibold text-lg text-text">보스 수익</h1>
<div class="flex gap-3 items-center">
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">아이템 가격</button>
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">히스토리</button>
</div>
</div>
<div class="flex gap-4 items-center">
<button type="button" class="font-medium px-3 text-sm text-text-muted">주간</button>
<button type="button" class="bg-primary-tint font-semibold px-3 py-[5px] rounded-full text-primary-ink text-sm">월간</button>
<div class="flex gap-2 items-center ml-auto shrink-0">
<p class="text-sm text-text-muted whitespace-nowrap">동기화 기록 없음</p>
<button type="button" aria-label="새로고침" class="flex h-[30px] hover:text-primary-hover items-center justify-center text-primary-ink w-[30px]">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-refresh-cw w-4" aria-hidden="true">
<path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8">
</path>
<path d="M21 3v5h-5">
</path>
<path d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16">
</path>
<path d="M8 16H3v5">
</path>
</svg>
</button>
</div>
</div>
<div class="flex gap-4 items-center justify-center">
<button type="button" aria-label="이전 기간" class="border border-border disabled:opacity-30 flex h-7 items-center justify-center rounded-full text-text w-7">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-left w-4" aria-hidden="true">
<path d="m15 18-6-6 6-6">
</path>
</svg>
</button>
<div class="text-center">
<p class="font-semibold text-sm text-text">지난 달</p>
<p class="mt-0.5 tabular-nums text-text-muted text-xs">2026년 7월</p>
</div>
<button type="button" aria-label="다음 기간" class="border border-border disabled:opacity-30 flex h-7 items-center justify-center rounded-full text-text w-7">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-right w-4" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
</div>
<div>
<div class="flex h-6 items-center relative">
<p class="font-semibold text-text-muted text-xs tracking-wide">지난 달 총 수익</p>
<span role="img" aria-label="월간 결정석 1개" class="bg-primary-tint flex flex-none gap-1 h-5 items-center ml-2 px-1.5 rounded-full">
<img alt="" class="flex-none h-4 object-contain w-4" src="/src/assets/items/intense_power_crystal_monthly.webp">
<span class="font-bold leading-none tabular-nums text-primary-ink text-xs">1<span class="font-semibold opacity-70">개</span>
</span>
</span>
</div>
<div class="flex gap-2.5 items-center mt-1.5">
<span class="bg-primary-tint flex h-8 items-center justify-center rounded-full shrink-0 text-primary-ink w-8">
<svg data-testid="profit-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-[18px] w-[18px]" aria-hidden="true">
<ellipse cx="16.3" cy="6.4" rx="5.2" ry="2.2">
</ellipse>
<path d="M11.1 6.4v3.7">
</path>
<path d="M21.5 6.4v8.2">
</path>
<path d="M11.1 9.1a5.2 2.2 0 0 0 10.4 0">
</path>
<path d="M13.4 13.7A5.2 2.2 0 0 0 21.5 11.85">
</path>
<path d="M13.7 16.5A5.2 2.2 0 0 0 21.5 14.6">
</path>
<circle cx="8" cy="15" r="5.5">
</circle>
</svg>
</span>
<p class="font-extrabold leading-none tabular-nums text-primary-ink text-xl">5,000,000 <span class="font-bold text-text-muted text-xs">메소</span>
</p>
<button type="button" aria-label="총 수익 자세히 보기" aria-expanded="false" class="border border-border flex flex-none font-semibold gap-0.5 h-6 items-center ml-auto px-2.5 rounded-full text-[11px] text-text-muted">자세히 보기<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="flex-none h-3 lucide lucide-chevron-down w-3" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</button>
</div>
<div class="bg-border h-px mt-3" aria-hidden="true">
</div>
</div>
</div>
</div>
<div aria-hidden="true" style="height: 0px;">
</div>
</div>
<div data-testid="pull-content" class="pb-4 px-4 space-y-2" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<div class="isolate relative">
<div class="">
<button type="button" class="bg-surface border border-border flex gap-3 items-center px-4 py-3 rounded-[14px] w-full">
<span class="flex h-10 items-center justify-center relative shrink-0 w-10">
<span class="bg-surface-2 h-8 overflow-hidden relative rounded-full w-8">
<span class="flex font-bold h-full items-center justify-center text-text text-xs w-full">낟</span>
</span>
<svg viewBox="0 0 40 40" class="-scale-x-100 absolute h-full inset-0 pointer-events-none rotate-90 w-full" role="img" aria-label="월간 보스 처치 1 / 1">
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary">
</circle>
</svg>
</span>
<span class="flex-1 font-semibold text-left text-sm text-text truncate">낟낟</span>
<span class="font-bold relative tabular-nums text-sm text-text">5,000,000 메소</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-down text-text-muted w-4" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</button>
</div>
</div>
</div>
</div>
</div>"
`;

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 주간 탭 · 카드 접힘 — sticky 헤더와 카드 층 순서 1`] = `
"<div data-testid="screen-scroll" class="bottom-[var(--tab-bar-h)] fixed inset-x-0 overflow-y-auto overscroll-y-none top-[var(--sa-top)]">
<div class="-mt-[var(--sa-top)] space-y-4">
<div>
<div class="bg-bg fixed inset-x-0 pb-2 pt-[calc(1rem+var(--sa-top))] px-4 top-0 z-10">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="font-semibold text-lg text-text">보스 수익</h1>
<div class="flex gap-3 items-center">
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">아이템 가격</button>
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">히스토리</button>
</div>
</div>
<div class="flex gap-4 items-center">
<button type="button" class="bg-primary-tint font-semibold px-3 py-[5px] rounded-full text-primary-ink text-sm">주간</button>
<button type="button" class="font-medium px-3 text-sm text-text-muted">월간</button>
</div>
<div class="flex gap-4 items-center justify-center">
<button type="button" aria-label="이전 기간" class="border border-border disabled:opacity-30 flex h-7 items-center justify-center rounded-full text-text w-7">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-left w-4" aria-hidden="true">
<path d="m15 18-6-6 6-6">
</path>
</svg>
</button>
<div class="text-center">
<p class="font-semibold text-sm text-text">7월 2주차</p>
<p class="mt-0.5 tabular-nums text-text-muted text-xs">7월 9일 ~ 7월 15일</p>
</div>
<button type="button" aria-label="다음 기간" class="border border-border disabled:opacity-30 flex h-7 items-center justify-center rounded-full text-text w-7">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-right w-4" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
</div>
<div>
<div class="flex h-6 items-center relative">
<p class="font-semibold text-text-muted text-xs tracking-wide">7월 2주차 총 수익</p>
</div>
<div class="flex gap-2.5 items-center mt-1.5">
<span class="bg-primary-tint flex h-8 items-center justify-center rounded-full shrink-0 text-primary-ink w-8">
<svg data-testid="profit-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-[18px] w-[18px]" aria-hidden="true">
<ellipse cx="16.3" cy="6.4" rx="5.2" ry="2.2">
</ellipse>
<path d="M11.1 6.4v3.7">
</path>
<path d="M21.5 6.4v8.2">
</path>
<path d="M11.1 9.1a5.2 2.2 0 0 0 10.4 0">
</path>
<path d="M13.4 13.7A5.2 2.2 0 0 0 21.5 11.85">
</path>
<path d="M13.7 16.5A5.2 2.2 0 0 0 21.5 14.6">
</path>
<circle cx="8" cy="15" r="5.5">
</circle>
</svg>
</span>
<p class="font-extrabold leading-none tabular-nums text-primary-ink text-xl">13,000,000 <span class="font-bold text-text-muted text-xs">메소</span>
</p>
<button type="button" aria-label="총 수익 자세히 보기" aria-expanded="false" class="border border-border flex flex-none font-semibold gap-0.5 h-6 items-center ml-auto px-2.5 rounded-full text-[11px] text-text-muted">자세히 보기<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="flex-none h-3 lucide lucide-chevron-down w-3" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</button>
</div>
<div class="bg-border h-px mt-3" aria-hidden="true">
</div>
</div>
</div>
</div>
<div aria-hidden="true" style="height: 0px;">
</div>
</div>
<div data-testid="pull-content" class="pb-4 px-4 space-y-2" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<div class="isolate relative">
<div class="">
<button type="button" class="bg-surface border border-border flex gap-3 items-center px-4 py-3 rounded-[14px] w-full">
<span class="flex h-10 items-center justify-center relative shrink-0 w-10">
<span class="bg-surface-2 h-8 overflow-hidden relative rounded-full w-8">
<span class="flex font-bold h-full items-center justify-center text-text text-xs w-full">낟</span>
</span>
<svg viewBox="0 0 40 40" class="-scale-x-100 absolute h-full inset-0 pointer-events-none rotate-90 w-full" role="img" aria-label="주간 보스 처치 2 / 12">
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-1.25">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-11.067477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-20.884954084936208">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-30.70243112740431">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-40.519908169872416">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-50.33738521234052">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-60.15486225480862">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-69.97233929727673">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-79.78981633974483">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-89.60729338221293">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-99.42477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-109.24224746714914">
</circle>
</svg>
</span>
<span class="flex-1 font-semibold text-left text-sm text-text truncate">낟낟</span>
<span class="font-bold relative tabular-nums text-sm text-text">13,000,000 메소</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-down text-text-muted w-4" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</button>
</div>
</div>
</div>
</div>
</div>"
`;

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 주간 탭 · 카드 펼침 — 카드 안 sticky 헤더(ADR-047)와 보스 행 1`] = `
"<div data-testid="screen-scroll" class="bottom-[var(--tab-bar-h)] fixed inset-x-0 overflow-y-auto overscroll-y-none top-[var(--sa-top)]">
<div class="-mt-[var(--sa-top)] space-y-4">
<div>
<div class="bg-bg fixed inset-x-0 pb-2 pt-[calc(1rem+var(--sa-top))] px-4 top-0 z-10">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="font-semibold text-lg text-text">보스 수익</h1>
<div class="flex gap-3 items-center">
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">아이템 가격</button>
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">히스토리</button>
</div>
</div>
<div class="flex gap-4 items-center">
<button type="button" class="bg-primary-tint font-semibold px-3 py-[5px] rounded-full text-primary-ink text-sm">주간</button>
<button type="button" class="font-medium px-3 text-sm text-text-muted">월간</button>
</div>
<div class="flex gap-4 items-center justify-center">
<button type="button" aria-label="이전 기간" class="border border-border disabled:opacity-30 flex h-7 items-center justify-center rounded-full text-text w-7">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-left w-4" aria-hidden="true">
<path d="m15 18-6-6 6-6">
</path>
</svg>
</button>
<div class="text-center">
<p class="font-semibold text-sm text-text">7월 2주차</p>
<p class="mt-0.5 tabular-nums text-text-muted text-xs">7월 9일 ~ 7월 15일</p>
</div>
<button type="button" aria-label="다음 기간" class="border border-border disabled:opacity-30 flex h-7 items-center justify-center rounded-full text-text w-7">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-right w-4" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
</div>
<div>
<div class="flex h-6 items-center relative">
<p class="font-semibold text-text-muted text-xs tracking-wide">7월 2주차 총 수익</p>
</div>
<div class="flex gap-2.5 items-center mt-1.5">
<span class="bg-primary-tint flex h-8 items-center justify-center rounded-full shrink-0 text-primary-ink w-8">
<svg data-testid="profit-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-[18px] w-[18px]" aria-hidden="true">
<ellipse cx="16.3" cy="6.4" rx="5.2" ry="2.2">
</ellipse>
<path d="M11.1 6.4v3.7">
</path>
<path d="M21.5 6.4v8.2">
</path>
<path d="M11.1 9.1a5.2 2.2 0 0 0 10.4 0">
</path>
<path d="M13.4 13.7A5.2 2.2 0 0 0 21.5 11.85">
</path>
<path d="M13.7 16.5A5.2 2.2 0 0 0 21.5 14.6">
</path>
<circle cx="8" cy="15" r="5.5">
</circle>
</svg>
</span>
<p class="font-extrabold leading-none tabular-nums text-primary-ink text-xl">13,000,000 <span class="font-bold text-text-muted text-xs">메소</span>
</p>
<button type="button" aria-label="총 수익 자세히 보기" aria-expanded="false" class="border border-border flex flex-none font-semibold gap-0.5 h-6 items-center ml-auto px-2.5 rounded-full text-[11px] text-text-muted">자세히 보기<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="flex-none h-3 lucide lucide-chevron-down w-3" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</button>
</div>
<div class="bg-border h-px mt-3" aria-hidden="true">
</div>
</div>
</div>
</div>
<div aria-hidden="true" style="height: 0px;">
</div>
</div>
<div data-testid="pull-content" class="pb-4 px-4 space-y-2" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<div class="isolate relative">
<div class="bg-surface border border-border overflow-clip rounded-[14px]">
<button type="button" class="bg-surface flex gap-3 items-center px-4 py-3 sticky w-full z-[5]" style="top: calc(0px - var(--sa-top));">
<span class="flex h-10 items-center justify-center relative shrink-0 w-10">
<span class="bg-surface-2 h-8 overflow-hidden relative rounded-full w-8">
<span class="flex font-bold h-full items-center justify-center text-text text-xs w-full">낟</span>
</span>
<svg viewBox="0 0 40 40" class="-scale-x-100 absolute h-full inset-0 pointer-events-none rotate-90 w-full" role="img" aria-label="주간 보스 처치 2 / 12">
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-1.25">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-11.067477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-20.884954084936208">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-30.70243112740431">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-40.519908169872416">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-50.33738521234052">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-60.15486225480862">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-69.97233929727673">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-79.78981633974483">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-89.60729338221293">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-99.42477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-109.24224746714914">
</circle>
</svg>
</span>
<span class="flex-1 font-semibold text-left text-sm text-text truncate">낟낟</span>
<span class="font-bold relative tabular-nums text-sm text-text">13,000,000 메소</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-chevron-up text-text-muted w-4" aria-hidden="true">
<path d="m18 15-6-6-6 6">
</path>
</svg>
</button>
<div class="border-border border-t">
<ul>
<li class="border-b border-border flex gap-3 items-start last:border-b-transparent p-4">
<div role="img" aria-label="자쿰" title="자쿰" style="width: 40px; height: 40px; background-image: url(&quot;/src/assets/bosses/zakum.webp&quot;); background-size: 220%; background-position: 60% 40%; background-repeat: no-repeat;" class="rounded-full shrink-0">
</div>
<div class="flex-1 min-w-0">
<button type="button" aria-label="자쿰 카오스 드롭 아이템 관리" class="flex gap-1.5 h-6 items-center text-left w-full">
<span class="font-extrabold inline-flex items-center rounded-full text-[10px] tracking-[.03em]" style="height: 20px; padding: 0px 10px; background: linear-gradient(180deg, rgb(60, 60, 60), rgb(34, 31, 31)); border: 1px solid rgb(202, 168, 127); color: rgb(240, 216, 184);">카오스</span>
<span class="font-semibold text-sm text-text truncate">자쿰</span>
<span class="bg-primary-tint border border-dashed border-primary flex-none font-bold h-6 inline-flex items-center ml-auto px-2.5 rounded-full text-[11px] text-primary-ink">＋ 드롭 추가</span>
</button>
<div class="flex gap-2 items-center justify-between mt-2">
<div class="border border-border gap-2 inline-flex items-center px-1 py-0.5 rounded-full">
<button type="button" aria-label="낟낟 자쿰 카오스 파티원 수 감소" class="bg-surface-2 disabled:opacity-40 flex h-[18px] items-center justify-center rounded-full text-text w-[18px]">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-3 lucide lucide-minus w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
</svg>
</button>
<span class="tabular-nums text-text text-xs">2</span>
<button type="button" aria-label="낟낟 자쿰 카오스 파티원 수 증가" class="bg-surface-2 disabled:opacity-40 flex h-[18px] items-center justify-center rounded-full text-text w-[18px]">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-3 lucide lucide-plus w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
<path d="M12 5v14">
</path>
</svg>
</button>
</div>
<span class="font-semibold tabular-nums text-sm text-text">5,000,000 메소</span>
</div>
</div>
</li>
<li class="border-b border-border flex gap-3 items-start last:border-b-transparent p-4">
<div title="반 레온" aria-label="반 레온" style="width: 40px; height: 40px;" class="bg-surface-2 flex items-center justify-center rounded-full shrink-0 text-text-muted text-xs">?</div>
<div class="flex-1 min-w-0">
<button type="button" aria-label="반 레온 하드 드롭 아이템 관리" class="flex gap-1.5 h-6 items-center text-left w-full">
<span class="font-extrabold inline-flex items-center rounded-full text-[10px] tracking-[.03em]" style="height: 20px; padding: 0px 10px; background: linear-gradient(180deg, rgb(231, 132, 166), rgb(192, 75, 116)); border: 1px solid rgb(156, 58, 92); color: rgb(255, 255, 255); text-shadow: 0 1px 1px rgba(0,0,0,.25);">하드</span>
<span class="font-semibold text-sm text-text truncate">반 레온</span>
<span class="bg-primary-tint border border-dashed border-primary flex-none font-bold h-6 inline-flex items-center ml-auto px-2.5 rounded-full text-[11px] text-primary-ink">＋ 드롭 추가</span>
</button>
<div class="flex gap-2 items-center justify-between mt-2">
<div class="border border-border gap-2 inline-flex items-center px-1 py-0.5 rounded-full">
<button type="button" aria-label="낟낟 반 레온 하드 파티원 수 감소" class="bg-surface-2 disabled:opacity-40 flex h-[18px] items-center justify-center rounded-full text-text w-[18px]">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-3 lucide lucide-minus w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
</svg>
</button>
<span class="tabular-nums text-text text-xs">2</span>
<button type="button" aria-label="낟낟 반 레온 하드 파티원 수 증가" class="bg-surface-2 disabled:opacity-40 flex h-[18px] items-center justify-center rounded-full text-text w-[18px]">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-3 lucide lucide-plus w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
<path d="M12 5v14">
</path>
</svg>
</button>
</div>
<span class="font-semibold tabular-nums text-sm text-text">3,000,000 메소</span>
</div>
</div>
</li>
</ul>
</div>
</div>
</div>
</div>
</div>
</div>"
`;

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 추적 캐릭터 없음 — 조기 반환 경로(주 렌더와 다른 트리) 1`] = `
"<div class="flex flex-col min-h-[calc(100dvh-var(--sa-top)-var(--sa-bottom)-4rem)] p-4">
<h1 class="font-semibold text-lg text-text">보스 수익</h1>
<div class="flex flex-1 flex-col items-center justify-center">
<div data-testid="empty-state" class="flex flex-col gap-4 items-center text-center">
<div data-testid="empty-state-badge" aria-hidden="true" class="bg-primary-tint flex h-[84px] items-center justify-center rounded-full w-[84px]">
<svg data-testid="empty-state-leaf" width="42" height="43" viewBox="0 0 127 130" class="fill-primary-ink">
<path d="M60.4426 107.504L59.1392 127.924C59.1024 128.5 59.5598 128.987 60.1372 128.987H65.9593C66.5534 128.987 67.0165 128.472 66.9537 127.882L64.785 107.496C64.6975 106.673 65.5908 106.106 66.2984 106.536L78.2704 113.805C78.4651 113.923 78.6944 113.971 78.9203 113.941L103.215 110.732C104.008 110.628 104.363 109.681 103.835 109.081L91.452 94.9894C91.0117 94.4885 91.1759 93.7052 91.7802 93.4231L118.529 80.9405C119.315 80.5738 119.293 79.4491 118.494 79.1126L112.061 76.4041C111.526 76.1789 111.295 75.5471 111.558 75.0296L125.96 46.675C126.366 45.8757 125.596 44.9873 124.747 45.275L98.4688 54.1831C97.9655 54.3537 97.4167 54.1008 97.2193 53.6074L95.2595 48.7079C94.9641 47.9693 93.9662 47.8547 93.5109 48.5071L82.408 64.4213C81.7836 65.3163 80.3814 64.7067 80.6101 63.6396L88.1353 28.5217C88.311 27.7019 87.4603 27.0428 86.7103 27.4178L81.4218 30.062C80.9453 30.3003 80.3657 30.1231 80.1038 29.6592L63.9299 1.00826C63.5499 0.335101 62.5824 0.329222 62.1943 0.997712L45.543 29.6749C45.2779 30.1315 44.7033 30.3033 44.231 30.0672L38.9323 27.4178C38.1823 27.0428 37.3315 27.7018 37.5072 28.5217L44.9884 63.4338C45.2189 64.5095 43.7966 65.1145 43.1815 64.2025L32.5593 48.4523C32.1246 47.8077 31.1528 47.884 30.824 48.5885L28.4482 53.6797C28.2334 54.14 27.7076 54.3661 27.2258 54.2055L1.8202 45.7369C0.98094 45.4572 0.218491 46.3249 0.603813 47.1212L14.1413 75.0988C14.3797 75.5913 14.1779 76.184 13.6884 76.4287L7.43998 79.553C6.68865 79.9286 6.70724 81.0071 7.47107 81.3567L33.8706 93.4379C34.4733 93.7136 34.6458 94.4888 34.217 94.9941L22.2282 109.124C21.7222 109.72 22.0657 110.64 22.8386 110.759L46.6876 114.428C46.9344 114.466 47.1865 114.41 47.3943 114.272L58.8899 106.608C59.5787 106.149 60.4953 106.678 60.4426 107.504Z">
</path>
</svg>
</div>
<div class="space-y-1">
<p data-testid="empty-state-title" class="font-semibold text-base text-text">추적 중인 캐릭터가 없습니다</p>
<p data-testid="empty-state-description" class="max-w-[220px] text-sm text-text-muted">보스 스케줄러에서 캐릭터를 선택하면 수익 현황을 확인할 수 있습니다</p>
</div>
<button type="button" class="bg-primary font-semibold hover:bg-primary-hover px-5 py-2.5 rounded-full text-on-primary text-sm">캐릭터 선택하러 가기</button>
</div>
</div>
</div>"
`;
